tests/snapshots/yaml_suite_snapshots__yaml_suite_4GC6_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 7.7. Single Quoted Characters
  from: "http://www.yaml.org/spec/1.2/spec.html#id2788307"
  tags: spec scalar 1.3-err
  yaml: "'here''s to \"quotes\"'\n"
  tree: "+STR\n +DOC\n  =VAL 'here's to \"quotes\"\n -DOC\n-STR\n"
  json: "\"here's to \\\"quotes\\\"\"\n"
