tests/snapshots/yaml_suite_snapshots__yaml_suite_4GC6_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: "http://www.yaml.org/spec/1.2/spec.html#id2788307"
  json: "\"here's to \\\"quotes\\\"\"\n"
  name: Spec Example 7.7. Single Quoted Characters
  tags: spec scalar 1.3-err
  tree: "+STR\n +DOC\n  =VAL 'here's to \"quotes\"\n -DOC\n-STR\n"
  yaml: "'here''s to \"quotes\"'\n"
