tests/snapshots/yaml_suite_snapshots__yaml_suite_4H7K_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Flow sequence with invalid extra closing bracket
  from: "@perlpunk"
  tags: error flow sequence
  fail: true
  yaml: "---\n[ a, b, c ] ]\n"
  tree: "+STR\n +DOC ---\n  +SEQ\n   =VAL :a\n   =VAL :b\n   =VAL :c\n  -SEQ\n -DOC\n"
