tests/snapshots/yaml_suite_snapshots__yaml_suite_4H7K_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Flow sequence with invalid extra closing bracket
  tags: error flow sequence
  tree: "+STR\n +DOC ---\n  +SEQ\n   =VAL :a\n   =VAL :b\n   =VAL :c\n  -SEQ\n -DOC\n"
  yaml: "---\n[ a, b, c ] ]\n"
