tests/snapshots/yaml_suite_snapshots__yaml_suite_4HVU_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Wrong indendation in Sequence
  from: "@perlpunk"
  tags: error sequence indent
  fail: true
  yaml: "key:\n   - ok\n   - also ok\n  - wrong\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   +SEQ\n    =VAL :ok\n    =VAL :also ok\n   -SEQ\n"
