tests/snapshots/yaml_suite_snapshots__yaml_suite_4HVU_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Wrong indendation in Sequence
  tags: error sequence indent
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   +SEQ\n    =VAL :ok\n    =VAL :also ok\n   -SEQ\n"
  yaml: "key:\n   - ok\n   - also ok\n  - wrong\n"
