tests/snapshots/yaml_suite_snapshots__yaml_suite_4JVG_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Scalar value with two anchors
  tags: anchor error mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :top1\n   +MAP &node1\n    =VAL &k1 :key1\n    =VAL :val1\n   -MAP\n   =VAL :top2\n"
  yaml: "top1: &node1\n  &k1 key1: val1\ntop2: &node2\n  &v2 val2\n"
